--- a/Mobile World Station/AboutUs.htm
+++ b/Mobile World Station/AboutUs.htm
@@ -36,7 +36,7 @@ p a:visited {color: #02361C;}
 <p>This is our Mobile World Station website and I hope you are enjoying looking through and adding our items to our basket! We have spent alot of time working on this website making sure the Quality, Design, Production, Layout, And Function of the website is good enough to release online as well as to most importantly make sure that the website is good enough so that you as in the user are able to use and enjoy our website without any issues or problems! If you do experiance any issues whilst using our website you are able to contact us via either phone number or email, You can learn more about getting in touch with us on the Contact Us page of the website. </p>
 
 <ul>
-<li><a href="MobileWorldStation.htm">Home</a></li>
+<li><a href="index.htm">Home</a></li>
 <li><a href="Iphone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
