--- a/Mobile World Station/LearnMore.htm
+++ b/Mobile World Station/LearnMore.htm
@@ -44,7 +44,7 @@ p a:visited {color: #02361C;}
 <p>If you would like to learn even more about the website and help improve our website we will leave you with the feedback form on our very own made Online Forum! <p><a href="https://docs.google.com/forms/d/1we5d6dEgPYM0if8CoUzIB8v_h1-clY5uwzEvwU1eH6I/edit">Mobile World Station Online Forum!</a></p>
 
 <ul>
-<li><a href="MobileWorldStation.htm">Home</a></li>
+<li><a href="index.htm">Home</a></li>
 <li><a href="Iphone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
