--- a/Mobile World Station/ComingSoon.htm
+++ b/Mobile World Station/ComingSoon.htm
@@ -44,7 +44,7 @@ p a:visited {color: #02361C;}
 <p>Coming soon to Mobile World Station are the IPad Pro, Samsung Galaxy M24, And the Google Pixel Pro Max 8 all at a very reasonable and a bargin of a price!</p>
 
 <ul>
-<li><a href="MobileWorldStation.htm">Home</a></li>
+<li><a href="index.htm">Home</a></li>
 <li><a href="Iphone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
