--- a/Mobile World Station/SamsungGalaxy.htm
+++ b/Mobile World Station/SamsungGalaxy.htm
@@ -45,7 +45,7 @@ p a:visited {color: #02361C;}
 <p>Price Drop:£599.00</p>
 
 <ul>
-<li><a href="MobileWorldStation.htm">Home</a></li>
+<li><a href="index.htm">Home</a></li>
 <li><a href="Iphone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
