--- a/Mobile World Station/index.htm
+++ b/Mobile World Station/index.htm
@@ -66,7 +66,7 @@ document.write('<b>Good Evening, Welcome to the Mobile World Station Website!</b
 <img src="Images/IPhone.png" alt="Image of IPhone">
 
 <ul>
-<li><a href="MobileWorldStation.htm">Home</a></li>
+<li><a href="index.htm">Home</a></li>
 <li><a href="Iphone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
