--- a/U13_A3/SamsungGalaxy.htm
+++ b/U13_A3/SamsungGalaxy.htm
@@ -19,7 +19,7 @@ p a:visited {color: #02361C;}
 
 </style>
 
-<img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
+<img src="images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
 <a href="Iphone.htm">IPhone</a> : 
@@ -35,13 +35,13 @@ p a:visited {color: #02361C;}
 
 <p>Here are all the newest IPhone Mobile Phones and other products including the brand new IPhone 15 and Apple MacBook for a bargin price!</p>
 
-<img src="Images/SamsungGalaxy.png" alt="Image of Samsung Galaxy">
+<img src="images/SamsungGalaxy.png" alt="Image of Samsung Galaxy">
 <iframe width="500" height="250" src="https://www.youtube.com/embed/BSYsXVFzmKA" title="Galaxy S23 Ultra: Official Introduction Film | Samsung" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p>£872.00</p>
 
 
 
-<img src="Images/SamsungGalaxy Z Flip5.png" alt="Image of Samsung Galaxy Z Flip5">
+<img src="images/SamsungGalaxy Z Flip5.png" alt="Image of Samsung Galaxy Z Flip5">
 <p>Price Drop:£599.00</p>
 
 <ul>
