--- a/U13_A3/ComingSoon.htm
+++ b/U13_A3/ComingSoon.htm
@@ -19,7 +19,7 @@ p a:visited {color: #02361C;}
 
 </style>
 
-<img src="images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
+<img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
 <a href="Iphone.htm">IPhone</a> : 
@@ -35,11 +35,11 @@ p a:visited {color: #02361C;}
 
 <p>Here are all of the up and coming mobile phones and devices that will soon be coming to the Mobile World Station website ranging from Apple, Samsung, And Google. Prices will be shown when the devices release onto the website and we will try to provide you with the best price possible from all the up and coming devices that will be soon releasing to the website.</p>
 
-<img src="images/IPad.png" alt="Image of an IPad">
+<img src="Images/IPad.png" alt="Image of an IPad">
 
-<img src="images/SamsungGalaxyM24.png" alt="Image of a Samsung Galaxy M24">
+<img src="Images/SamsungGalaxyM24.png" alt="Image of a Samsung Galaxy M24">
 
-<img src="images/GooglePixelProMax8.png" alt="Image of a Google Pixel Pro Max 8">
+<img src="Images/GooglePixelProMax8.png" alt="Image of a Google Pixel Pro Max 8">
 
 <p>Coming soon to Mobile World Station are the IPad Pro, Samsung Galaxy M24, And the Google Pixel Pro Max 8 all at a very reasonable and a bargin of a price!</p>
 
