--- a/U13_A3/GooglePixel.htm
+++ b/U13_A3/GooglePixel.htm
@@ -19,7 +19,7 @@ p a:visited {color: #02361C;}
 
 </style>
 
-<img src="images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
+<img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
 <a href="Iphone.htm">IPhone</a> : 
@@ -35,13 +35,13 @@ p a:visited {color: #02361C;}
 
 <p>Here on this page of the website we are showcasing the newest Google Pixel devices mainly showing the new Google Pixel 8 pro and the Google Chromebook for a good reasonable price.</p>
 
-<img src="images/GooglePixel.png" alt="Image of Google Pixel">
+<img src="Images/GooglePixel.png" alt="Image of Google Pixel">
 <iframe width="500" height="250" src="https://www.youtube.com/embed/otomCbnwsv0" title="Meet Google Pixel 8 and Pixel 8 Pro" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p>£699.00</p>
 
 
 
-<img src="images/GoogleChromebook.png" alt="Image of Google Chromebook">
+<img src="Images/GoogleChromebook.png" alt="Image of Google Chromebook">
 <p>£179.00</p>
 
 <ul>
