--- a/U13_A3/IPhone.htm
+++ b/U13_A3/IPhone.htm
@@ -19,7 +19,7 @@ p a:visited {color: #02361C;}
 
 </style>
 
-<img src="images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
+<img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
 <a href="Iphone.htm">IPhone</a> : 
@@ -35,12 +35,12 @@ p a:visited {color: #02361C;}
 
 <p>Here are all the newest IPhone Mobile Phones and other products including the brand new IPhone 15 and Apple MacBook for a bargin price!</p>
 
-<img src="images/IPhone.png" alt="Image of IPhone"> 
+<img src="Images/IPhone.png" alt="Image of IPhone"> 
 
 <iframe width="500" height="250" src="https://www.youtube.com/embed/XHTrLYShBRQ" title="Introducing iPhone 15 | WOW | Apple" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <p>£799.00</p>
 
-<img src="images/MacBook.png" alt="Image of MacBook">
+<img src="Images/MacBook.png" alt="Image of MacBook">
 <p>£799.00</p>
 
 <ul>
