--- a/U13_A3/ContactUs.htm
+++ b/U13_A3/ContactUs.htm
@@ -20,7 +20,7 @@ table, th, td {
   border-collapse: collapse;
 </style>
 
-<img src="images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
+<img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
 <a href="Iphone.htm">IPhone</a> : 
