--- a/U13_A3/LearnMore.htm
+++ b/U13_A3/LearnMore.htm
@@ -19,7 +19,7 @@ p a:visited {color: #02361C;}
 
 </style>
 
-<img src="images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
+<img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
 <a href="Iphone.htm">IPhone</a> : 
