--- a/U13_A3/IPhone.htm
+++ b/U13_A3/IPhone.htm
@@ -22,7 +22,7 @@ p a:visited {color: #02361C;}
 <img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
-<a href="Iphone.htm">IPhone</a> : 
+<a href="IPhone.htm">IPhone</a> : 
 <a href="SamsungGalaxy.htm">Samsung Galaxy</a> : 
 <a href="GooglePixel.htm">Google Pixel</a> : 
 <a href="AboutUs.htm">About Us</a>:
@@ -45,7 +45,7 @@ p a:visited {color: #02361C;}
 
 <ul>
 <li><a href="index.htm">Home</a></li>
-<li><a href="Iphone.htm">IPhone</a></li>
+<li><a href="IPhone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
 <li><a href="AboutUs.htm">About Us</a></li>
