--- a/U13_A3/index.htm
+++ b/U13_A3/index.htm
@@ -36,7 +36,7 @@ document.write('<b>Good Evening, Welcome to the Mobile World Station Website!</b
 </script>
 <p>
 <a href="index.htm">Home</a> :  
-<a href="Iphone.htm">IPhone</a> : 
+<a href="IPhone.htm">IPhone</a> : 
 <a href="SamsungGalaxy.htm">Samsung Galaxy</a> : 
 <a href="GooglePixel.htm">Google Pixel</a> : 
 <a href="AboutUs.htm">About Us</a>:
@@ -67,7 +67,7 @@ document.write('<b>Good Evening, Welcome to the Mobile World Station Website!</b
 
 <ul>
 <li><a href="index.htm">Home</a></li>
-<li><a href="Iphone.htm">IPhone</a></li>
+<li><a href="IPhone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
 <li><a href="AboutUs.htm">About Us</a></li>
