--- a/U13_A3/ContactUs.htm
+++ b/U13_A3/ContactUs.htm
@@ -23,7 +23,7 @@ table, th, td {
 <img src="Images/Website_Banner_1.png" alt="Mobile World Station Banner Image" 
 <p>
 <a href="index.htm">Home</a> :  
-<a href="Iphone.htm">IPhone</a> : 
+<a href="IPhone.htm">IPhone</a> : 
 <a href="SamsungGalaxy.htm">Samsung Galaxy</a> : 
 <a href="GooglePixel.htm">Google Pixel</a> : 
 <a href="AboutUs.htm">About Us</a>:
@@ -82,7 +82,7 @@ Review!<br>
 
 <ul>
 <li><a href="index.htm">Home</a></li>
-<li><a href="Iphone.htm">IPhone</a></li>
+<li><a href="IPhone.htm">IPhone</a></li>
 <li><a href="SamsungGalaxy.htm">Samsung Galaxy</a></li>
 <li><a href="GooglePixel.htm">Google Pixel</a></li>
 <li><a href="AboutUs.htm">About Us</a></li>
