--- a/U13_A3/LearnMore.htm
+++ b/U13_A3/LearnMore.htm
@@ -43,6 +43,12 @@ p a:visited {color: #02361C;}
 
 <p>If you would like to learn even more about the website and help improve our website we will leave you with the feedback form on our very own made Online Forum! <p><a href="https://docs.google.com/forms/d/1we5d6dEgPYM0if8CoUzIB8v_h1-clY5uwzEvwU1eH6I/edit">Mobile World Station Online Forum!</a></p>
 
+<p>Here are links to Online forums from other Mobile Websites to give you an idea on the purpose of thier website which is also similar to our purpose of our website as well as it would help the users of this website out incase you would like to know anything about Mobile Phone websites.</p>
+
+<a href="https://www.o2.co.uk/help">02 Mobile Help and Support</a></p> 
+
+<a href="https://support.vodafone.co.uk/?icmp=uk~1_consumer~topnav~3_help~3_help_and_support~1_support_centre&linkpos=topnav~1~3~3~1">Vodafone Help And Support</a></p>
+
 <ul>
 <li><a href="index.htm">Home</a></li>
 <li><a href="IPhone.htm">IPhone</a></li>
