--- a/U13_A3/index.htm
+++ b/U13_A3/index.htm
@@ -59,11 +59,15 @@ document.write('<b>Good Evening, Welcome to the Mobile World Station Website!</b
 
 <h1 style="color:Black;">Mobile World Station</h1>
 
-<p>Here is my website on Mobile World Stations, It will include everything you are looking for which include Mobile Phones, Laptops, And Tablets. The website will also include a Coming Soon page that will show what up and coming Mobiles Phones will be soon added to the website soon when they release. There will be another page that will showcase the newest devices coming from IPhone, Samsung, And Google Pixel and will show the prices of the devices for you to add to your basket. The Contact Us page gives you our contact details weather its through Mobile or Email, You will be able to contact us on any of these services incase you need help with the website, Run into any issues on the website, Report a problem on the website, Or you can report an issue if you are running into any problems adding any items off the website into your basket.</p>
+<p>Here is my website on Mobile World Stations, It will include everything you are looking for which include Mobile Phones, Laptops, Tablets, As well as other accessories like SIM cards and Phone chargers. The website will also include a Coming Soon page that will show what up and coming Mobiles Phones will be soon added to the website soon when they release. There will be another page that will showcase the newest devices coming from IPhone, Samsung, And Google Pixel and will show the prices of the devices for you to add to your basket. The Contact Us page gives you our contact details weather its through Mobile or Email, You will be able to contact us on any of these services incase you need help with the website, Run into any issues on the website, Report a problem on the website, Or you can report an issue if you are running into any problems adding any items off the website into your basket.</p>
 
 <img src="Images/GooglePixel.png" alt="Image of Google Pixel">
 
 <img src="Images/IPhone.png" alt="Image of IPhone">
+
+<img src="Images/SimCard.png" alt="Image of SimCard">
+
+<img src="Images/Charger.png" alt="Image of Charger">
 
 <ul>
 <li><a href="index.htm">Home</a></li>
