--- a/Mobile World Station/U13_A3/SamsungGalaxy.htm
+++ b/Mobile World Station/U13_A3/SamsungGalaxy.htm
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>Mobile World Station</title>
+<title>Samsung Galaxy</title>
 </head>
 
 <style>
@@ -34,6 +34,8 @@ p a:visited {color: #02361C;}
 <h1>Samsung Galaxy</h1>
 
 <p>Here are all the newest IPhone Mobile Phones and other products including the brand new IPhone 15 and Apple MacBook for a bargin price!</p>
+
+<p>If you have any issues with your Samsung Galaxy Mobile Phone check out this <a href="https://eu.community.samsung.com/t5/english/ct-p/uk?page=1&tab=setting:samsung.featured_topics" target="_blank">Samsung Community Forum</a></p>
 
 <img src="Images/SamsungGalaxy.png" alt="Image of Samsung Galaxy">
 <iframe width="500" height="250" src="https://www.youtube.com/embed/BSYsXVFzmKA" title="Galaxy S23 Ultra: Official Introduction Film | Samsung" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
