--- a/U13_A3/ComingSoon.htm
+++ b/U13_A3/ComingSoon.htm
@@ -2,7 +2,7 @@
 
 <!DOCTYPE html>
 <html>
-<title>Mobile World Station</title>
+<title>Coming Soon</title>
 </head>
 
 <style>
@@ -42,6 +42,7 @@ p a:visited {color: #02361C;}
 <img src="Images/GooglePixelProMax8.png" alt="Image of a Google Pixel Pro Max 8">
 
 <p>Coming soon to Mobile World Station are the IPad Pro, Samsung Galaxy M24, And the Google Pixel Pro Max 8 all at a very reasonable and a bargin of a price!</p>
+<p>Check out <a href="https://www.androidauthority.com/upcoming-android-phone-690821/" target="_blank">this link</a> for new phones coming in 2024</p>
 
 <ul>
 <li><a href="index.htm">Home</a></li>
