--- a/U3/index.htm
+++ b/U3/index.htm
@@ -17,7 +17,7 @@ p a:visited {color: #02361C;}
   a:hover {color: #026633}
 </style>
 
-<img alt="Digital Portfolio Banner image made by Nathan Boden" height="125" src="images/PortfolioBannerByNathanBoden.png" width="900" 
+<img alt="Digital Portfolio Banner image made by Nathan Boden" height="125" src="images/PortfolioBannerByNathanBoden.png" width="900">
 
 
 <body>
